--- a/services.html
+++ b/services.html
@@ -90,8 +90,7 @@
 							<div class="col-md-12">
 								<div class="about-logo">
 									<h3>Our Best <span class="color">Services</span></h3>
-									<p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas</p>
-                                    	<p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas</p>
+									<p>Zeal Biotech Private Limited currently occupies a good reputation due to its passion and commitment in the field of sale and distribution of WHO and ISO Certified pharma products in domestic market since 2012.</p>
 								</div>  
 							</div>
 						</div>
