--- a/about.html
+++ b/about.html
@@ -92,9 +92,9 @@
 				<div class="col-md-6">
 					<div class="about-text">
 						<h3>Our <span class="color">Company</span></h3>
-						<p>Zeal Biotech Pvt Ltd is a privately-owned pharmaceuticals company founded by Mr Sachin Garg who has a rich experience of working in pharmaceutical marketing in India for over 16 years.
+						<p>Zeal Biotech Pvt Ltd is a privately-owned pharmaceuticals company of working in pharmaceutical marketing in India for over 9 years.
 
-The company was established in 2011 with the vision to provide high quality pharmaceutical products at affordable prices that enhances quality of life and delivers exceptional value to all our business associates.
+The company was established in 2012 with the vision to provide high quality pharmaceutical products at affordable prices that enhances quality of life and delivers exceptional value to all our business associates.
 
 Driven by a will to succeed, Zeal Biotech, has, in a considerably short span of time, made its presence felt in the industry and has been successful in making a strong foothold in fiercely competitive market scenario through its unwavering focus on quality, commitment and delivery.</p>
 						 
